samples/_failures_safe/1761556850_ed3be1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_bd135606.c:159: error: expected ‘;’, ‘,’ or ‘)’ at end of input
